Just testing VS code

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 Welcome!
 My name is Levi Arnett I love college Football, my Girlfriend and my dog
 This is where I upload my ATK 301: Intro to Web Design homework.
+adding more code to verify vscode works too!
